tests/org.eclipse.mylyn.docs.intent.parser.test/dataTests/intentDocuments/errors/newlines.intent
Document {
Chapter Chapitre 1
 {
	Text
	
	
}
Chapter Chapitre 2
 {
	Text
}

}